maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:22: error: ')' expected but ';' found.
        if(aBiscuit(i,j)){(x=i;y=j)}
                              ^JediEscaper:22: error: ';' expected but ')' found.
        if(aBiscuit(i,j)){(x=i;y=j)}
                                  ^